--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<p></p><!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8">
@@ -15,23 +15,23 @@
         </ul>
     </nav>
     <header>
-        <div>
-            <h1 class="text-1">halloween</h1>
+        <div class="pi-lg">
+            <h1 class="">Halloween</h1>
             <p class="text-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet vitae laborum blanditiis ducimus repudiandae necessitatibus ad rem, reiciendis voluptate aperiam corporis facilis perferendis obcaecati qui fugit iste eum eligendi optio.</p>
-            <button>Scopri di più</button>
-            <button>Accedi</button>
-            <button>Contattaci</button>
+            <button class="bgColor-1">Scopri di più</button>
+            <button class="bgColor-2">Accedi</button>
+            <button class="bgColor-3">Contattaci</button>
         </div>
         <div>
             <img src="./freestocks-twVS-YjQn9Y-unsplash.jpg" alt="halloween">
         </div>
     </header>
     <main>
-        <div>
-            <img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna">
-            <img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna">
-            <img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna">
-            <img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna">
+        <div class="container mb-lg">
+            <div><img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna"></div>
+            <div><img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna"></div>
+            <div><img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna"></div>
+            <div><img src="./marko-blazevic-S7mAngnWV1A-unsplash.jpg" alt="lanterna"></div>
         </div>
     </main>
 </body>
