--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Sass</title>
 </head>
 <body>
-    <nav>
+    <nav class="pi-lg">
+        <img src="./pngwing.com.png" alt="logo">
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
